# aiidalab-aurora

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Aurora-app.ipynb  INSTALLATION_GUIDE.md  LICENSE  Panels.ipynb  README.md  __init__.py  aurora.ipynb  aurora_aiida_tutorial.md  available_samples.json  available_samples_id.json  available_samples_peter.json  data_schemas.py  example_specs.csv  mock_data.ipynb  monitor-test-11-8-22.ipynb  monitor-test_20220811.ipynb  monitor-test_20220826.ipynb  notebook_experiments.ipynb  notebook_results.ipynb  notebook_samples.ipynb  setup.cfg  setup.json  setup.py  start.py  test_panels.ipynb  test_plugin.ipynb  test_schema.ipynb  weights.json
.github/workflows/: ci.yaml
aurora/: __init__.py  main.py  query.py  time.py
aurora/common/: groups.py
aurora/common/models/: __init__.py  available_samples.py  battery_experiment.py  pattern_observer.py  protocols.py  samples.py  utils.py
aurora/common/models/backends/: __init__.py  backend.py  json.py  utils.py
aurora/common/widgets/: __init__.py  filters.py
aurora/engine/: __init__.py  results.py  submit.py
aurora/experiment/: __init__.py  controller.py  model.py  submit_experiment.py  view.py
aurora/experiment/builder/: __init__.py  builder.py  controller.py  model.py  utils.py  view.py
aurora/experiment/builder/preview/: controller.py  model.py  view.py
aurora/experiment/builder/protocols/: controller.py  model.py  view.py
aurora/experiment/protocols/: __init__.py  custom.py  selector.py  standard.py  technique_widget.py
aurora/experiment/samples/: from_id.py  from_recipe.py  from_specs.py
aurora/experiment/tomato/: settings.py
aurora/interface/: main.py
aurora/interface/analyze/: __init__.py  output_explorer.py  results_plotter.py  visualizer.py
aurora/interface/cycling/: __init__.py  custom.py  protocol.py  standard.py  technique_widget.py  tomato_widget.py
aurora/interface/menus/: __init__.py  manage_samples.py  samples.py  submit_experiment.py  utils.py  visualize_results.py
aurora/interface/sample/: __init__.py  from_id.py  from_recipe.py  from_specs.py  sample_filter.py
aurora/interface/tomato/: __init__.py  settings.py
aurora/inventory/: __init__.py  manager.py
aurora/inventory/protocols/: __init__.py  editor.py  manager.py  techniques.py
aurora/inventory/samples/: __init__.py  groups.py  importer.py  manage_samples.py  manager.py
aurora/models/: __init__.py  available_samples.py  battery_experiment.py  pattern_observer.py
aurora/results/: model.py  presenter.py  utils.py  view.py  visualize_results.py
aurora/results/analyze/: output_explorer.py  results_plotter.py
aurora/results/plot/: factory.py  model.py  presenter.py  view.py
aurora/schemas/: __init__.py  battery.py  convert.py  cycling.py  data_schemas.py
aurora/schemas/dgbowl_schemas/: __init__.py
aurora/schemas/dlite_example/: model.json  model_example.ipynb  new.json
aurora/schemas/tomato_0p1/: __init__.py  method.py  sample.py  tomato.py
aurora/schemas/tomato_0p2/: __init__.py  method.py  sample.py  tomato.py
aurora/schemas/utils/: __init__.py
data/plots/: README.md
docs/: requirements.in  requirements.txt
docs/source/: conf.py  index.rst  report.rst
docs/source/development/: index.rst
docs/source/howto/: index.rst
docs/source/installation/: index.rst
docs/source/tutorial/: experiment_builder.rst  index.rst  protocols_manager.rst  results_visualizer.rst  samples_manager.rst
example_notebooks/: test_panels_1.ipynb  test_plugin.ipynb  test_schema.ipynb
utils/: README.md  results_importer.ipynb  results_importer.py
visualizer-example/: commercial-4.02.cycling.json  plots.py
(+19 files in other folders)
