[aiidalab]
title = Aurora

[metadata]
name = aurora
version = 0.7.0
author = Loris Ercole
author_email = loris.ercole@epfl.ch
description = An AiiDAlab application for the Aurora BIG-MAP Stakeholder initiative.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lorisercole/aurora-app
project_urls =
    Logo = https://raw.githubusercontent.com/lorisercole/aurora-app/main/img/logo.png
    Documentation = https://github.com/lorisercole/aurora-app/#readme
    Bug Tracker = https://github.com/lorisercole/aurora-app/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Natural Language :: English
    Development Status :: 3 - Alpha
    Framework :: AiiDA

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiidalab
    aiida-aurora>=0.4.0
    dgbowl-schemas>=111
    ipywidgets
    ipympl
    ipyfilechooser
    numpy
    pandas
    pydantic

[options.extras_require]
devtools =
    pre-commit~=2.2
    yapf==0.32.0
