[aiidalab]
title = Aurora

[metadata]
name = aurora
version = 0.8.0
author = Edan Bainglass
author_email = edan.bainglass@psi.ch
description = An AiiDAlab application for the Aurora BIG-MAP Stakeholder initiative.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epfl-theos/aiidalab-aurora
project_urls =
    Logo = https://raw.githubusercontent.com/epfl-theos/aiidalab-aurora/main/img/logo.png
    Documentation = https://github.com/epfl-theos/aiidalab-aurora/#readme
    Bug Tracker = https://github.com/epfl-theos/aiidalab-aurora/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Natural Language :: English
    Development Status :: 3 - Alpha
    Framework :: AiiDA

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiidalab
    aiida-aurora>=0.4.0
    dgbowl-schemas>=111
    ipywidgets
    ipympl
    ipyfilechooser
    numpy
    pandas
    pydantic

[options.extras_require]
devtools =
    pre-commit~=2.2
