[aiidalab]
title = Aurora

[metadata]
name = aurora
version = 0.12.1
author = Edan Bainglass, Francisco F. Ramirez, Loris Ercole, Giovanni Pizzi
author_email = edan.bainglass@psi.ch
description = An AiiDAlab application for the Aurora BIG-MAP Stakeholder initiative.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EmpaEconversion/aiidalab-aurora
project_urls =
    Logo = https://raw.githubusercontent.com/EmpaEconversion/aiidalab-aurora/main/img/logo.png
    Documentation = https://github.com/EmpaEconversion/aiidalab-aurora/#readme
    Bug Tracker = https://github.com/EmpaEconversion/aiidalab-aurora/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Natural Language :: English
    Development Status :: 3 - Alpha
    Framework :: AiiDA

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiidalab
    aiida-aurora>=0.5.1
    dgbowl-schemas>=111
    ipywidgets
    ipympl
    ipyfilechooser
    numpy
    pandas
    pydantic
    seaborn

[options.extras_require]
devtools =
    pre-commit~=2.2
docs =
    sphinx-design~=0.4.1
    pydata-sphinx-theme==0.13.3
